feat(holiday): implement Holiday Maintenance module and remove deprecated attendance endpoints